--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo": "~52.0.41",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
+    "react-hook-form": "^7.55.0",
     "react-native": "0.76.7"
   },
   "devDependencies": {
