--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-hook-form": "^7.55.0",
-    "react-native": "0.76.7"
+    "react-native": "0.76.7",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
