--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
+    "test": "yarn jest",
+    "test-verbose": "yarn jest --verbose",
+    "test-coverage": "yarn jest --coverage",
     "web": "expo start --web"
   },
   "dependencies": {
